--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "apisauce": "^2.1.2",
     "expo": "~42.0.1",
+    "expo-blur": "~9.0.3",
+    "expo-constants": "~11.0.1",
     "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "lottie-react-native": "4.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.2.0",
